<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feed Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="app_short_name">Feed Notifier</string>
    <string name="extension_description">View the count of unread items in your favorite feeds</string>
    <string name="synchronization">Synchronization</string>
    <string name="enable_autosync_desc">Configure feed sync interval. Notification will fire based on this interval</string>
    <string name="enable_autosync">Auto sync</string>
    <string name="sync_interval">Sync interval</string>
    <string name="sync_interval_desc">How often should synchronize?</string>
    <string name="notifications">Notification options</string>
    <string name="notifications_desc">Configure the notification options</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_desc">Enable notification information message</string>
    <string name="enable_sound_desc">Play sound on notification</string>
    <string name="enable_sound">Play sound</string>
    <string name="enable_vibrate_desc">Vibrate phone on notification</string>
    <string name="enable_vibrate">Vibrate phone</string>
    <string name="enable_led_desc">Flash lights on notification</string>
    <string name="enable_led">LED</string>
    <string name="action_accept">Accept</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_about_desc">View information about Feed Notifier</string>
    <string name="action_search">Search</string>
    <string name="every1hour">Every 1 hour</string>
    <string name="every2hour">Every 2 hours</string>
    <string name="every4hour">Every 4 hours</string>
    <string name="every6hour">Every 6 hours</string>
    <string name="every12hour">Every 12 hours</string>
    <string name="every24hour">Every 24 hours</string>
    <string name="click_behave_title">Click behavior</string>
    <string name="title_apps">Apps</string>
    <string name="title_shortcuts">Shortcuts</string>
    <string name="pref_shortcut_default">Default</string>
    <string name="widget_configuration">Widget options</string>
    <string name="widget_configuration_desc">Configure the widget options</string>
    <string name="search_hint">search</string>
    <string name="action_selecteverything">Select everything</string>
    <string name="action_selectallcategories">Select All Categories</string>
    <string name="action_selectallfeeds">Select All feeds</string>
    <string name="action_selectnone">Select None</string>
    <string name="notification_configuration">Notification configuration</string>
    <string name="action_switchtheme">Theme</string>
    <string name="minimum_unread">Default minimum unread feeds</string>
    <string name="minimum_unread_desc">Select default minimum unread feeds. This value can be overriden per feed by using slider on main screen</string>
    <string name="widget_appearance">Widget Appearance</string>
    <string name="widget_appearance_desc">Configure the appearance of widget</string>
    <string name="action_expandall">Expand All</string>
    <string name="action_collapseall">Collapse All</string>
    <string name="noti_content_text" formatted="false">%s unread items</string>
    <string name="noti_inbox_text" formatted="false">%s unread items in %s</string>
    <string name="intro_text">Feed notifier is a simple, highly customizable and an intuitive notifier for your favorite unread articles in Feedly.</string>
    <string  name="login_text">Click here to Login</string>
    <string name="internet_error">You must be connected to internet to complete this operation</string>
    <string name="configuration">Configuration</string>
    <string name="lastupdate_display_format">Updated: %s</string>
    <string name="login_required">Login Required</string>
    <string name="login_required_desc">Please open the Feedly notifier app and login</string>
    <string name="logout_ques">Are you sure you want to logout?</string>
     <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="widget_text_size_desc">Adjust the Text Size in the widget</string>
    <string name="widget_text_size">Text size</string>
    <string name="widget_background_opacity">Background Opacity</string>
    <string name="widget_background_opacity_desc">Adjust the opacity of the background</string>
    <string name="widget_title_color_desc">Set the title color</string>
    <string name="widget_title_color">Title Color</string>
    <string name="widget_count_color_desc">Set the count color</string>
    <string name="widget_count_color">Count color</string>
    <string name="dark">Dark</string>        
    <string name="black">Black</string>
    <string name="sepia">Sepia</string>
    <string name="light">Light</string>
    <string name="pick_theme">Pick Theme</string>
    <string name="themes">Theme</string>
    <string name="themes_desc">Set the theme for app and widget</string>
    <string name="follow_twitter">Follow me on Twitter</string>
    <string name="feedback_button">Feedback</string>
    <string name="rate_button">Rate</string>
    <string name="whatsnew_tab" formatted="false">What\'s new</string>
    <string name="send_email">Send Email</string>
    <string name="min_unread">Minimum unread: %s</string>
    <string name="widget_background_color">Background color / Opacity</string>
    <string name="widget_background_color_desc">Set the background color and opacity of the widget</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="no_feed_subscriptions">No feed subscriptions found</string>
    <string name="enable_widget_header">Show widget header</string>
    <string name="enable_widget_header_desc">Show the header with icons and last updated time</string>
    <string name="sort_order_desc">Weather to sort alphabetically or by most unread</string>
    <string name="sort_order">Widget sort order</string>
    <string name="most_unread_first">Most unread first</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="sync_started">Synchronization started</string>
    <string name="no_unread_items">No unread items</string>
    <string name="notification_ringtone">Notification Ringtone</string>
    <string name="ringtone_notif">Ringtone of the notification</string>

</resources>