<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/synchronization" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_autosync"
            android:summary="@string/enable_autosync_desc"
            android:title="@string/enable_autosync" />

        <ListPreference
            android:defaultValue="1"
            android:dependency="enable_autosync"
            android:entries="@array/sync_interval"
            android:entryValues="@array/sync_interval_values"
            android:key="sync_interval"
            android:summary="@string/sync_interval_desc"
            android:title="@string/sync_interval" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_notifications"
            android:summary="@string/enable_notifications_desc"
            android:title="@string/enable_notifications" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_notifications"
            android:key="enable_sound"
            android:summary="@string/enable_sound_desc"
            android:title="@string/enable_sound" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_notifications"
            android:key="enable_vibrate"
            android:summary="@string/enable_vibrate_desc"
            android:title="@string/enable_vibrate" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_notifications"
            android:key="enable_led"
            android:summary="@string/enable_led_desc"
            android:title="@string/enable_led" />

        <ListPreference
            android:defaultValue="10"
            android:dependency="enable_notifications"
            android:entries="@array/minimum_unread"
            android:entryValues="@array/minimum_unread_values"
            android:key="minimum_unread"
            android:summary="@string/minimum_unread_desc"
            android:title="@string/minimum_unread" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/widget_configuration" >
        <com.google.android.apps.dashclock.configuration.AppChooserPreference
            android:key="click_intent"
            android:title="@string/click_behave_title" />

        <PreferenceScreen
            android:summary="@string/widget_appearance_desc"
            android:title="@string/widget_appearance" >
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/action_about" >
        <Preference
            android:key="action_about"
            android:summary="@string/action_about_desc"
            android:title="@string/action_about" />
    </PreferenceCategory>

</PreferenceScreen>