<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_search"
        android:showAsAction="collapseActionView|always"
          android:icon="@drawable/ic_action_search"
           android:actionViewClass="android.widget.SearchView" 
          android:title="@string/action_search"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/action_settings"
        android:title="@string/action_settings"/>
    
     <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/navigation_refresh"
        android:title="@string/action_refresh"/>
     

            <item
        android:id="@+id/action_accept"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/navigation_accept"
        android:title="@string/action_accept"/>
            
              <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
              
                <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
      

</menu>
